# idle-tui

./: .pre-commit-config.yaml  mre.py  pyproject.toml
.github/workflows/: ci.yaml
src/idle_tui/: __init__.py  app.py
src/idle_tui/widgets/: characters.py
